--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ book:
     - part: cs-part.qmd
       chapters:
         - intro.qmd
+        - mcrl.qmd
     - part: ts-part.qmd
       chapters:
         - summary.qmd
