--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ bibliography: references.bib
 format:
   html:
     theme: litera
+    number-depth: 2
+    html-math-method: mathjax
 
 editor: visual
 
