Add linear probability model unit

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ book:
         - mcrl.qmd
         - asymp.qmd
         - het.qmd
+        - lpm.qmd
     - part: ts-part.qmd
       chapters:
         - summary.qmd
