--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ book:
         - asymp.qmd
         - het.qmd
         - lpm.qmd
+        - other-cs.qmd
     - part: ts-part.qmd
       chapters:
         - summary.qmd
